--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3526,6 +3526,39 @@ h2 {
   margin: 0 auto;
 }
 
+body.active {
+  overflow-y: hidden;
+  overflow: visible;
+  padding-right: 18px;
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s;
+  -o-transition: transform 0.5s;
+  transition: transform 0.5s;
+  transition: transform 0.5s, -webkit-transform 0.5s;
+  -webkit-transform: translateX(-214px);
+      -ms-transform: translateX(-214px);
+          transform: translateX(-214px);
+}
+body.active::before {
+  content: "";
+  z-index: 10;
+  height: 100%;
+  opacity: 0.85;
+  position: absolute;
+  top: 0;
+  right: 18px;
+  bottom: 0;
+  left: 0;
+  -webkit-transition: opacity 1s;
+  -o-transition: opacity 1s;
+  transition: opacity 1s;
+  background-color: #010101;
+}
+
+body {
+  overflow: hidden;
+}
+
 header {
   background-color: #ffd700;
 }
@@ -3534,7 +3567,7 @@ header {
   padding: 30px 20px 0px 20px;
   display: grid;
   grid-template-columns: auto 1fr;
-  min-height: 140px;
+  position: relative;
 }
 
 .header-logo {
@@ -3569,7 +3602,7 @@ header {
           justify-content: flex-end;
   margin-top: -3px;
 }
-.header-navbar_list {
+.header-navbar__list {
   list-style-type: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3577,11 +3610,11 @@ header {
   padding: 0;
   margin-right: -20px;
 }
-.header-navbar_item {
+.header-navbar__item {
   display: list-item;
   margin-left: 34px;
 }
-.header-navbar_link {
+.header-navbar__link {
   font-size: 22px;
   line-height: 20px;
   letter-spacing: 0.03em;
@@ -3590,9 +3623,9 @@ header {
   text-decoration: none;
   position: relative;
   display: block;
-  padding: 20px;
+  padding: 10px 20px 10px 20px;
 }
-.header-navbar_link::after {
+.header-navbar__link::after {
   content: "";
   border-bottom: 4px solid #010101;
   position: absolute;
@@ -3603,9 +3636,69 @@ header {
   -o-transition: width 0.5s, left 0.5s;
   transition: width 0.5s, left 0.5s;
 }
-.header-navbar_link:hover:after, .header-navbar_link:focus:after {
+.header-navbar__link:hover:after, .header-navbar__link:focus:after {
   width: 100%;
   left: 0;
+}
+
+.header-navbar__hamburger {
+  position: relative;
+  height: 30px;
+  width: 40px;
+  cursor: pointer;
+  -webkit-transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+          transform: rotate(0deg);
+  -webkit-transition: 1s ease-in-out;
+  -o-transition: 1s ease-in-out;
+  transition: 1s ease-in-out;
+}
+.header-navbar__hamburger span {
+  opacity: 2;
+  border-radius: 5px;
+  background-color: #010101;
+  position: absolute;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 5px;
+  -webkit-transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+          transform: rotate(0deg);
+  -webkit-transition: 0.5s ease-in-out;
+  -o-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+}
+.header-navbar__hamburger span:nth-of-type(1) {
+  top: 0;
+}
+.header-navbar__hamburger span:nth-of-type(2) {
+  top: 12px;
+}
+.header-navbar__hamburger span:nth-of-type(3) {
+  top: 24px;
+}
+.header-navbar__hamburger.active {
+  z-index: 15;
+}
+.header-navbar__hamburger.active span {
+  background-color: #ffffff;
+}
+.header-navbar__hamburger.active span:nth-of-type(1) {
+  top: 12px;
+  -webkit-transform: rotate(135deg);
+      -ms-transform: rotate(135deg);
+          transform: rotate(135deg);
+}
+.header-navbar__hamburger.active span:nth-of-type(2) {
+  left: -30px;
+  opacity: 0;
+}
+.header-navbar__hamburger.active span:nth-of-type(3) {
+  top: 12px;
+  -webkit-transform: rotate(-135deg);
+      -ms-transform: rotate(-135deg);
+          transform: rotate(-135deg);
 }
 
 .slides {
@@ -3619,14 +3712,9 @@ header {
   padding-top: 20px;
   z-index: -1;
   display: grid;
-  grid-template-areas: "tit img " "sub img " "tex img " "lin img ";
   grid-template-rows: minmax(106px, -webkit-max-content) auto 1fr auto;
   grid-template-rows: minmax(106px, max-content) auto 1fr auto;
-  grid-template-columns: 1fr auto;
   row-gap: 20px;
-  -webkit-column-gap: 180px;
-     -moz-column-gap: 180px;
-          column-gap: 180px;
 }
 .slide__title {
   grid-area: tit;
@@ -3641,7 +3729,6 @@ header {
 }
 .slide__text {
   grid-area: tex;
-  width: 395px;
   height: 101px;
   line-height: 20px;
   color: #555555;
@@ -3675,6 +3762,9 @@ header {
   margin-right: 30px;
   padding-top: 4px;
 }
+.slide__img img {
+  max-width: 100%;
+}
 
 .slide.active {
   position: relative;
@@ -3706,18 +3796,318 @@ header {
 .indicators .indicator.active {
   background-color: #ffffff;
 }
-
-.section {
-  padding-top: 113px;
-  padding-bottom: 140px;
-}
 .section h2 {
   text-align: center;
   margin: 0px 80px 14px 80px;
 }
-.section p {
+.section-text {
   font-size: 20px;
   text-align: center;
-  margin: 0px 80px 86px 80px;
   line-height: 1.2;
+}
+
+.section-content {
+  display: grid;
+  -webkit-column-gap: 40px;
+     -moz-column-gap: 40px;
+          column-gap: 40px;
+}
+.section-content__item {
+  display: grid;
+  grid-template-columns: 50px 1fr;
+  grid-template-rows: minmax(30px, -webkit-max-content) auto;
+  grid-template-rows: minmax(30px, max-content) auto;
+  grid-template-areas: "img tit" "img tex";
+  row-gap: 8px;
+  -webkit-column-gap: 20px;
+     -moz-column-gap: 20px;
+          column-gap: 20px;
+}
+.section-content__title {
+  grid-area: tit;
+  margin: 0;
+  font-size: 22px;
+  line-height: 24px;
+}
+.section-content__text {
+  grid-area: tex;
+  margin: 0;
+  color: #898989;
+  line-height: 1.3;
+}
+.section-content__img {
+  grid-area: img;
+  font-size: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-line-pack: start;
+      align-content: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+footer {
+  background-color: #010101;
+  color: #898989;
+}
+
+.footer-title {
+  color: #ffd700;
+  text-align: center;
+  margin: 0px 80px 14px 80px;
+}
+.footer-text {
+  text-align: center;
+  font-size: 20px;
+  line-height: 24px;
+}
+.footer-form {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: 1fr 127px;
+}
+.footer-form__input {
+  padding: 16px 22px;
+  height: 50px;
+  border: none;
+  border-radius: 4px;
+}
+.footer-form__btn {
+  background-color: #ffd700;
+  height: 50px;
+  border: none;
+  border-radius: 4px;
+  line-height: 24px;
+  color: #010101;
+  font-weight: 700;
+  cursor: pointer;
+}
+.footer-socials {
+  font-size: 44px;
+  text-align: center;
+  margin-bottom: 126px;
+}
+.footer-socials a {
+  margin: 0 9.2px;
+}
+.footer-socials .fa {
+  color: #ffd700;
+  -webkit-transition: color 1s;
+  -o-transition: color 1s;
+  transition: color 1s;
+}
+.footer-socials .fa:hover {
+  color: #ffffff;
+}
+
+.footer-info {
+  display: grid;
+  -webkit-column-gap: 20px;
+     -moz-column-gap: 20px;
+          column-gap: 20px;
+  row-gap: 40px;
+  line-height: 1.3;
+}
+.footer-info > div {
+  position: relative;
+}
+.footer-info > div::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 2px;
+  background-color: rgba(255, 255, 255, 0.05);
+}
+.footer-info > div:hover::after {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.footer-info ul {
+  list-style-type: none;
+  padding-left: 0;
+  margin: 0;
+}
+.footer-info a {
+  color: #898989;
+  text-decoration: none;
+  -webkit-transition: color 0.8s;
+  -o-transition: color 0.8s;
+  transition: color 0.8s;
+}
+.footer-info a:hover {
+  color: #ffffff;
+}
+.footer-info__first a {
+  font-weight: 600;
+}
+@media (min-width: 768px) {
+  .header-menu {
+    min-height: 140px;
+  }
+  .header-navbar__hamburger {
+    display: none;
+  }
+}
+@media (min-width: 992px) {
+  .footer-text,
+.section-text {
+    margin: 0px 80px 86px 80px;
+  }
+  .slide {
+    grid-template-columns: 1fr auto;
+    -webkit-column-gap: 180px;
+       -moz-column-gap: 180px;
+            column-gap: 180px;
+    grid-template-areas: "tit img " "sub img " "tex img " "lin img ";
+  }
+  .section {
+    padding-top: 113px;
+    padding-bottom: 140px;
+  }
+  .section-content {
+    grid-template-columns: 1fr 1fr 1fr;
+    row-gap: 60px;
+  }
+  footer {
+    padding: 90px 0 140px 0;
+  }
+  .footer-form {
+    margin: 0 100px 70px 100px;
+  }
+  .footer-socials {
+    margin-bottom: 126px;
+  }
+  .footer-info {
+    grid-template-columns: 300px 1fr 1fr 1fr 1fr;
+  }
+}
+@media (max-width: 992px) {
+  .section {
+    padding-top: 60px;
+    padding-bottom: 80px;
+  }
+  footer {
+    padding: 60px 0 80px 0;
+  }
+}
+@media (max-width: 992px) and (min-width: 576px) {
+  .section-content {
+    grid-template-columns: 1fr 1fr;
+    row-gap: 50px;
+  }
+}
+@media (max-width: 992px) and (min-width: 768px) {
+  .footer-text,
+.section-text {
+    margin: 0px 60px 60px 60px;
+  }
+  .slide {
+    grid-template-columns: 1fr auto;
+    -webkit-column-gap: 60px;
+       -moz-column-gap: 60px;
+            column-gap: 60px;
+    grid-template-areas: "tit img " "sub img " "tex img " "lin img ";
+  }
+  .footer-form {
+    margin: 0 80px 40px 80px;
+  }
+  .footer-socials {
+    margin-bottom: 80px;
+  }
+  .footer-info {
+    grid-template-columns: 350px 1fr 1fr;
+  }
+  .footer-info__first {
+    grid-row: 1/span 2;
+  }
+}
+@media (max-width: 768px) {
+  .footer-text,
+.section-text {
+    margin: 0px 0px 40px 0px;
+  }
+  .header-menu {
+    min-height: 100px;
+  }
+  .header-navbar__list {
+    display: none;
+    position: absolute;
+    top: -16px;
+    right: -220px;
+    width: 240px;
+    height: 100vh;
+    padding-top: 40px;
+    background-color: #ffd700;
+  }
+  .header-navbar__item {
+    padding: 3px 17px;
+    margin-left: 0;
+  }
+}
+@media (max-width: 768px) and (min-width: 576px) {
+  .slide {
+    grid-template-columns: 1fr 1fr;
+    -webkit-column-gap: 40px;
+       -moz-column-gap: 40px;
+            column-gap: 40px;
+    grid-template-areas: "tit img " "sub img " "tex img " "lin img ";
+  }
+  .indicators {
+    padding-top: 35px;
+    padding-bottom: 37px;
+  }
+  .footer-form {
+    margin: 0 0 20px 0;
+  }
+  .footer-socials {
+    margin-bottom: 60px;
+  }
+  .footer-info {
+    grid-template-columns: 300px 1fr 1fr;
+  }
+  .footer-info__first {
+    grid-row: 1/span 2;
+  }
+}
+@media (max-width: 576px) {
+  .slide {
+    grid-template-columns: 1fr 1fr;
+    -webkit-column-gap: 20px;
+       -moz-column-gap: 20px;
+            column-gap: 20px;
+    grid-template-areas: "tit tit" "sub sub" "tex img " "lin lin";
+  }
+  .slide__links {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-right: -35px;
+  }
+  .indicators {
+    padding-top: 30px;
+    padding-bottom: 37px;
+  }
+  .section-content {
+    grid-template-columns: 1fr;
+    row-gap: 40px;
+  }
+  .section-content__item {
+    grid-template-columns: 60px 1fr;
+  }
+  .footer-form {
+    margin: 0 0 20px 0;
+    grid-template-columns: 1fr;
+  }
+  .footer-socials {
+    margin-bottom: 40px;
+  }
+  .footer-info {
+    grid-template-columns: 1fr 1fr;
+  }
+  .footer-info__first {
+    grid-column: 1/span 2;
+  }
 }
