--- a/assets/scss/header/_header-navbar.scss
+++ b/assets/scss/header/_header-navbar.scss
@@ -4,33 +4,49 @@
   justify-content: flex-end;
   margin-top: -3px;
 
-  &_list {
+  &__list {
     list-style-type: none;
     display: flex;
     padding: 0;
     margin-right: -20px;
+
+    @media (max-width: $md) {
+      display: none;
+      position: absolute;
+      top: -16px;
+      right: -220px;
+      width: 240px;
+      height: 100vh;
+      padding-top: 40px;
+      background-color: $color-accent;
+    }
   }
 
-  &_item {
+  &__item {
     display: list-item;
     margin-left: 34px;
+
+    @media (max-width: $md) {
+      padding: 3px 17px;
+      margin-left: 0;
+    }
   }
 
-  &_link {
+  &__link {
     font-size: 22px;
     line-height: 20px;
     letter-spacing: 0.03em;
-    color: #010101;
+    color: $color-primary;
     font-weight: 700;
     text-decoration: none;
     position: relative;
 
     display: block;
-    padding: 20px;
+    padding: 10px 20px 10px 20px;
 
     &::after {
       content: "";
-      border-bottom: 4px solid #010101;
+      border-bottom: 4px solid $color-primary;
       position: absolute;
       bottom: 0;
       left: 50%;
@@ -42,6 +58,63 @@
     &:focus:after {
       width: 100%;
       left: 0;
+    }
+  }
+}
+
+.header-navbar__hamburger {
+  position: relative;
+  height: 30px;
+  width: 40px;
+  cursor: pointer;
+  transform: rotate(0deg);
+  transition: 1s ease-in-out;
+
+  @media (min-width: $md) {
+    display: none;
+  }
+
+  span {
+    opacity: 2;
+    border-radius: 5px;
+    background-color: $color-primary;
+    position: absolute;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 5px;
+    transform: rotate(0deg);
+    transition: 0.5s ease-in-out;
+
+    &:nth-of-type(1) {
+      top: 0;
+    }
+    &:nth-of-type(2) {
+      top: 12px;
+    }
+    &:nth-of-type(3) {
+      top: 24px;
+    }
+  }
+
+  &.active {
+    z-index: 15;
+
+    span {
+      background-color: $color-light;
+
+      &:nth-of-type(1) {
+        top: 12px;
+        transform: rotate(135deg);
+      }
+      &:nth-of-type(2) {
+        left: -30px;
+        opacity: 0;
+      }
+      &:nth-of-type(3) {
+        top: 12px;
+        transform: rotate(-135deg);
+      }
     }
   }
 }
