--- a/assets/scss/header/_header-slider.scss
+++ b/assets/scss/header/_header-slider.scss
@@ -9,11 +9,32 @@
   padding-top: 20px;
   z-index: -1;
   display: grid;
-  grid-template-areas: "tit img " "sub img " "tex img " "lin img ";
   grid-template-rows: minmax(106px, max-content) auto 1fr auto;
-  grid-template-columns: 1fr auto;
   row-gap: 20px;
-  column-gap: 180px;
+
+  @media (min-width: $lg) {
+    grid-template-columns: 1fr auto;
+    column-gap: 180px;
+    grid-template-areas: "tit img " "sub img " "tex img " "lin img ";
+  }
+
+  @media (max-width: $lg) and (min-width: $md) {
+    grid-template-columns: 1fr auto;
+    column-gap: 60px;
+    grid-template-areas: "tit img " "sub img " "tex img " "lin img ";
+  }
+
+  @media (max-width: $md) and (min-width: $sm) {
+    grid-template-columns: 1fr 1fr;
+    column-gap: 40px;
+    grid-template-areas: "tit img " "sub img " "tex img " "lin img ";
+  }
+
+  @media (max-width: $sm) {
+    grid-template-columns: 1fr 1fr;
+    column-gap: 20px;
+    grid-template-areas: "tit tit" "sub sub" "tex img " "lin lin";
+  }
 
   &__title {
     grid-area: tit;
@@ -30,7 +51,6 @@
 
   &__text {
     grid-area: tex;
-    width: 395px;
     height: 101px;
     line-height: 20px;
     color: $color-gray;
@@ -45,6 +65,11 @@
     padding: 0;
     margin-top: 17px;
     margin-bottom: 4px;
+
+    @media (max-width: $sm) {
+      justify-content: center;
+      margin-right: -35px;
+    }
 
     li {
       margin-right: 35px;
@@ -66,6 +91,10 @@
     grid-area: img;
     margin-right: 30px;
     padding-top: 4px;
+
+    img {
+      max-width: 100%;
+    }
   }
 }
 
@@ -82,6 +111,16 @@
   padding-top: 40px;
   padding-bottom: 47px;
   margin: 0;
+
+  @media (max-width: $md) and (min-width: $sm) {
+    padding-top: 35px;
+    padding-bottom: 37px;
+  }
+
+  @media (max-width: $sm) {
+    padding-top: 30px;
+    padding-bottom: 37px;
+  }
 
   .indicator {
     background-color: rgba($color-light, 0.5);
