--- a/assets/scss/sections/_features.scss
+++ b/assets/scss/sections/_features.scss
@@ -1,14 +1,80 @@
 .section {
-  padding-top: 113px;
-  padding-bottom: 140px;
+  @media (min-width: $lg) {
+    padding-top: 113px;
+    padding-bottom: 140px;
+  }
+
+  @media (max-width: $lg) {
+    padding-top: 60px;
+    padding-bottom: 80px;
+  }
+
   h2 {
     text-align: center;
     margin: 0px 80px 14px 80px;
   }
-  p {
+
+  &-text {
     font-size: 20px;
     text-align: center;
-    margin: 0px 80px 86px 80px;
+
     line-height: 1.2;
+  }
+}
+
+.section-content {
+  display: grid;
+
+  column-gap: 40px;
+
+  @media (min-width: $lg) {
+    grid-template-columns: 1fr 1fr 1fr;
+    row-gap: 60px;
+  }
+
+  @media (max-width: $lg) and (min-width: $sm) {
+    grid-template-columns: 1fr 1fr;
+    row-gap: 50px;
+  }
+
+  @media (max-width: $sm) {
+    grid-template-columns: 1fr;
+    row-gap: 40px;
+  }
+
+  &__item {
+    display: grid;
+    grid-template-columns: 50px 1fr;
+    grid-template-rows: minmax(30px, max-content) auto;
+    grid-template-areas: "img tit" "img tex";
+
+    row-gap: 8px;
+    column-gap: 20px;
+
+    @media (max-width: $sm) {
+      grid-template-columns: 60px 1fr;
+    }
+  }
+
+  &__title {
+    grid-area: tit;
+    margin: 0;
+    font-size: 22px;
+    line-height: 24px;
+  }
+
+  &__text {
+    grid-area: tex;
+    margin: 0;
+    color: $color-gray-light;
+    line-height: 1.3;
+  }
+
+  &__img {
+    grid-area: img;
+    font-size: 50px;
+    display: flex;
+    align-content: flex-start;
+    justify-content: center;
   }
 }
