--- a/assets/scss/header/_header-logo.scss
+++ b/assets/scss/header/_header-logo.scss
@@ -2,12 +2,12 @@
   display: flex;
   align-items: center;
 
-  &_img {
+  &__img {
     margin-right: 10px;
     margin-top: -5px;
   }
 
-  &_title {
+  &__title {
     font-size: 30px;
     line-height: 20px;
     font-weight: 700;
